# airbyte

airbyte-integrations/connectors/source-kaggle/: .dockerignore  Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-kaggle/integration_tests/: configured_catalog.json  invalid_config.json
airbyte-integrations/connectors/source-kaggle/source_kaggle/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-kaggle/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
